Dec 23, 2009 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.1

Dec 19, 2009 - chris
o the flag HAM_DIRECT_ACCESS can return a pointer in hamsterdb's managed
    storage (only In-Memory Databases!)
o the flag HAM_HINT_UBER_FAST_ACCESS for ham_get_key_count was 
	renamed to HAM_FAST_ESTIMATE
o removed HAM_HINT_SEQUENTIAL and HAM_HINT_RANDOM_WRITE and 
	HAM_HINT_UBER_FAST_ACCESS - they have the same use as the DAM flags; 
	sorry for the inconvenience. If you used them, just remove them

Dec 16, 2009 - chris
o improved tests of HAM_HINTS_* flags and fixed some bugs in the
    process - mainly asserts which failed because the flags were unexpected

Dec 15, 2009 - chris
o ham_get_parameter now returns the Data Access Mode (DAM)
o renamed HAM_EMPTY_DATABASE_NAME to HAM_DEFAULT_DATABASE_NAME

Dec 14, 2009 - chris
o fixed bug in ham_find - if record was empty, but record->size was set 
    by the caller, then the record->size value was not overwritten
    with zero
o fixed compilation error if HAM_DISABLE_ENCRYPTION was set
o fixed ham_check_integrity - sometimes returned errors although the
    database was fine

Dec 12, 2009 - chris
o html documentation is now part of the tarball

Dec 03, 2009 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.0

Nov 28, 2009 - chris
o Disallowed pagesizes which are not aligned to 2k (with exception of 1k); 
    allowed pagesizes are now 1k, 2k, 4k, 6k, 8k etc

Nov 9, 2009 - chris
o C++ API now has all the new functions
o ham_get_flags is now deprecated - it was replaced by ham_get_parameters
    and ham_env_get_parameters
o the flag HAM_LOCK_EXCLUSIVE is now enabled by default
o the new function ham_get_key_count() returns number of all keys in the 
    Database

Jul 31, 2009 - chris 
o performance improvements in the freelist code, freelist was abstracted
    to allow multiple implementations (all from Ger Hobbelt, 